--- a/.envrc.sample
+++ b/.envrc.sample
@@ -1,5 +1,17 @@
-export DOMAIN=traefik.swarm.autonomic.zone
-export FILE_PROVIDER_YML_VERSION=v1
-export LETS_ENCRYPT_ENV=staging
+export SERVICE=traefik
 export STACK_NAME=traefik
+
+export DOMAIN=traefik.example.com
+export LETS_ENCRYPT_ENV=production
+
+# export DASHBOARD_ENABLED=true
+# WARN, INFO etc.
+export LOG_LEVEL=WARN
+
 export TRAEFIK_YML_VERSION=v1
+
+## Enable Keycloak
+#export COMPOSE_FILE="compose.yml:compose.keycloak.yml"
+#export FILE_PROVIDER_ENABLED=1
+## Options for file-provider / Keycloak SSO
+#export FILE_PROVIDER_YML_VERSION=v1
