--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,7 @@ steps:
       DOMAIN: traefik.swarm-test.autonomic.zone
       STACK_NAME: traefik
       LETS_ENCRYPT_ENV: production
+      LETS_ENCRYPT_EMAIL: helo@autonomic.zone
       TRAEFIK_YML_VERSION: v4
       FILE_PROVIDER_YML_VERSION: v1
 trigger:
