--- a/compose.keycloak.yml
+++ b/compose.keycloak.yml
@@ -2,7 +2,7 @@
 version: "3.8"
 
 services:
-  traefik:
+  app:
     configs:
       - source: file_provider_yml
         target: /etc/traefik/file-provider.yml
