--- a/file-provider.yml
+++ b/file-provider.yml
@@ -3,7 +3,7 @@ http:
   middlewares:
     keycloak:
       forwardAuth:
-        address: "http://traefik_forward_auth:4181"
+        address: "http://traefik-forward-auth:4181"
         trustForwardHeader: true
         authResponseHeaders:
           - X-Forwarded-User
