--- a/.envrc.sample
+++ b/.envrc.sample
@@ -1,4 +1,5 @@
-export SERVICE=traefik
+export APP=traefik
+# 3wc: leave this, we need to access the volume
 export STACK_NAME=traefik
 
 export DOMAIN=traefik.example.com
