--- a/compose.yml
+++ b/compose.yml
@@ -30,6 +30,7 @@ services:
     deploy:
       update_config:
         failure_action: rollback
+        order: start-first
       labels:
         - "traefik.enable=true"
         - "traefik.http.services.traefik.loadbalancer.server.port=web"
