--- a/.envrc.sample
+++ b/.envrc.sample
@@ -1,6 +1,4 @@
 export APP=traefik
-# 3wc: leave this, we need to access the volume
-export STACK_NAME=traefik
 
 export DOMAIN=traefik.example.com
 export LETS_ENCRYPT_ENV=production
@@ -11,12 +9,11 @@ export LETS_ENCRYPT_EMAIL=certs@example.com
 export LOG_LEVEL=WARN
 
 export TRAEFIK_YML_VERSION=v1
+export FILE_PROVIDER_YML_VERSION=v1
 
 ## Enable Keycloak
 #export COMPOSE_FILE="compose.yml:compose.keycloak.yml"
-#export FILE_PROVIDER_ENABLED=1
-## Options for file-provider / Keycloak SSO
-#export FILE_PROVIDER_YML_VERSION=v1
+#export KEYCLOAK_MIDDLEWARE_ENABLED=1
 
 ## SMTP port 587
 #export COMPOSE_FILE="compose.yml:compose.smtp.yml"
