Thread port routers through the env

--- a/.env.sample
+++ b/.env.sample
@@ -16,5 +16,11 @@ LOG_LEVEL=WARN
 #COMPOSE_FILE="compose.yml:compose.smtp.yml"
 #SMTP_ENABLED=1
 
+## Gitea SSH
+# GITEA_SSH_ENABLED=1
+
+## Foodsoft SMTP
+# FOODSOFT_SMTP_ENABLED=1
+
 ## Host-mode networking
 #COMPOSE_FILE="compose.yml:compose.host.yml"
