Make foodsoft/gitea ports optional
Closes https://git.autonomic.zone/coop-cloud/traefik/issues/23.

--- a/.env.sample
+++ b/.env.sample
@@ -17,9 +17,11 @@ LOG_LEVEL=WARN
 #SMTP_ENABLED=1
 
 ## Gitea SSH
+# COMPOSE_FILE="compose.yml:compose.gitea.yml"
 # GITEA_SSH_ENABLED=1
 
 ## Foodsoft SMTP
+# COMPOSE_FILE="compose.yml:compose.foodsoft.yml"
 # FOODSOFT_SMTP_ENABLED=1
 
 ## Host-mode networking
