--- a/compose.yml
+++ b/compose.yml
@@ -2,11 +2,12 @@ version: "3.8"
 services:
   app:
     image: "traefik:v2.4.8"
+    # Note(decentral1se): *please do not* add any additional ports here.
+    # Doing so could break new installs with port conflicts. Please use
+    # the usual `compose.$name.yml` approach for any additional ports
     ports:
       - "80:80"
       - "443:443"
-      - "2222:2222"
-      - "2525:2525"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "letsencrypt:/etc/letsencrypt"
