Add RTMP optional port setup

--- a/.env.sample
+++ b/.env.sample
@@ -24,5 +24,9 @@ LOG_LEVEL=WARN
 # COMPOSE_FILE="compose.yml:compose.foodsoft.yml"
 # FOODSOFT_SMTP_ENABLED=1
 
+## Peertube RTMP
+# COMPOSE_FILE="compose.yml:compose.peertube.yml"
+# PEERTUBE_RTMP_ENABLED=1
+
 ## Host-mode networking
 #COMPOSE_FILE="compose.yml:compose.host.yml"
