--- a/compose.yml
+++ b/compose.yml
@@ -23,6 +23,7 @@ services:
       - FOODSOFT_SMTP_ENABLED
       - GITEA_SSH_ENABLED
       - LOG_LEVEL
+      - PEERTUBE_RTMP_ENABLED
       - SMTP_ENABLED
     healthcheck:
       test: ["CMD", "traefik", "healthcheck"]
