--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,7 @@ steps:
   - name: release a new version
     image: decentral1se/drone-abra:latest
     settings:
-      command: recipe matrix-synapse release
+      command: recipe traefik release
       deploy_key:
         from_secret: abra_bot_deploy_key
 trigger:
