Entrypoint for SSB MUXRPC

--- a/.env.sample
+++ b/.env.sample
@@ -28,5 +28,9 @@ LOG_LEVEL=WARN
 # COMPOSE_FILE="compose.yml:compose.peertube.yml"
 # PEERTUBE_RTMP_ENABLED=1
 
+## Secure Scuttlebutt MUXRPC
+# COMPOSE_FILE="compose.yml:compose.ssb.yml"
+# SSB_MUXRPC_ENABLED=1
+
 ## Host-mode networking
 #COMPOSE_FILE="compose.yml:compose.host.yml"
