Support mssql host mode connections

--- a/.env.sample
+++ b/.env.sample
@@ -32,5 +32,9 @@ LOG_LEVEL=WARN
 # COMPOSE_FILE="compose.yml:compose.ssb.yml"
 # SSB_MUXRPC_ENABLED=1
 
+## MSSQL
+# COMPOSE_FILE="compose.yml:compose.mssql.yml"
+# MSSQL_ENABLED=1
+
 ## Host-mode networking
 #COMPOSE_FILE="compose.yml:compose.host.yml"
