add support for Let's Encrypt DNS-01 challenge (for wildcard domains)
start with support for OVH provider, but in a way for others to be added in the future:

https://doc.traefik.io/traefik/https/acme/#dnschallenge

--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,11 @@ LETS_ENCRYPT_EMAIL=certs@example.com
 # WARN, INFO etc.
 LOG_LEVEL=WARN
 
+## Enable dns challenge (for wildcard domains)
+##   https://doc.traefik.io/traefik/https/acme/#dnschallenge
+#LETS_ENCRYPT_DNS_CHALLENGE_ENABLED=1
+#LETS_ENCRYPT_DNS_CHALLENGE_PROVIDER=ovh
+
 ## Enable Keycloak
 #COMPOSE_FILE="compose.yml:compose.keycloak.yml"
 #KEYCLOAK_MIDDLEWARE_ENABLED=1
