Support OVH configuration
See https://github.com/Autonomic-Cooperative/traefik/pull/1.

--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,14 @@ LOG_LEVEL=WARN
 #LETS_ENCRYPT_DNS_CHALLENGE_ENABLED=1
 #LETS_ENCRYPT_DNS_CHALLENGE_PROVIDER=ovh
 
+## OVH configuration
+# COMPOSE_FILE="compose.yml:compose.ovh.yml"
+# OVH_ENABLED=1
+# OVH_APPLICATION_KEY=
+# OVH_ENDPOINT=
+# SECRET_OVH_APP_SECRET_VERSION=v1
+# SECRET_OVH_CONSUMER_KEY=v1
+
 ## Enable Keycloak
 #COMPOSE_FILE="compose.yml:compose.keycloak.yml"
 #KEYCLOAK_MIDDLEWARE_ENABLED=1
