--- a/.drone.yml
+++ b/.drone.yml
@@ -14,8 +14,9 @@ steps:
       STACK_NAME: traefik
       LETS_ENCRYPT_ENV: production
       LETS_ENCRYPT_EMAIL: helo@autonomic.zone
-      TRAEFIK_YML_VERSION: v3
-      FILE_PROVIDER_YML_VERSION: v2
+      TRAEFIK_YML_VERSION: v4
+      FILE_PROVIDER_YML_VERSION: v3
+      ENTRYPOINT_VERSION: v1
 trigger:
   branch:
     - master
